tests/sema/bad/05_index_non_array.sg
let x:int = 1;
let y:int = x[0];
